2011-04-14  Paul Eggert  <eggert@cs.ucla.edu>

	* sysdep.c: Make symbols static if they're not exported.
	(emacs_get_tty, emacs_set_tty, old_fcntl_flags, old_fcntl_owner):
	Now static.
	(sigprocmask_set, full_mask): Remove; unused.
	(wait_debugging): Mark as visible.
	* syssignal.h (SIGFULLMASK, full_mask): Remove decls.
	* systty.h (emacs_get_tty, emacs_set_tty): Remove decls.

	* syntax.c (syntax_temp): Define only if !__GNUC__.

	* sound.c (current_sound_device, current_sound): Now static.

	* search.c (searchbufs, searchbuf_head): Now static.

	* scroll.c (scroll_cost): Remove; unused.
	* dispextern.h (scroll_cost): Remove decl.

	* region-cache.h (pp_cache): Mark as externally visible.

	* process.c: Make symbols static if they're not exported.
	(process_tick, update_tick, create_process, chan_process):
	(Vprocess_alist, proc_buffered_char, datagram_access):
	(fd_callback_data, send_process_frame, process_sent_to): Now static.
	(deactivate_process): Mark defn as static, as well as decl.
	* lisp.h (create_process): Remove decl.
	* process.h (chan_process, Vprocess_alist): Remove decls.

	* print.c: Make symbols static if they're not exported.
	(print_depth, new_backquote_output, being_printed, print_buffer):
	(print_buffer_size, print_buffer_pos, print_buffer_pos_byte):
	(print_interval, print_number_index, initial_stderr_stream):
	Now static.
	* lisp.h (Fprinc): Remove decl.
	(debug_output_compilation_hack): Mark as externally visible.

	* sysdep.c (croak): Move decl from here to syssignal.h.
	* syssignal.h (croak): Put it here, so the API can be checked when
	'croak' is called from dissociate_if_controlling_tty.

	* minibuf.c: Make symbols static if they're not exported.
	(minibuf_save_list, choose_minibuf_frame): Now static.
	* lisp.h (choose_minibuf_frame): Remove decl.

	* lisp.h (verify_bytepos, count_markers): Mark as externally visible.

	* lread.c: Make symbols static if they're not exported.